# AI_Camera

./: .gitignore  .travis.yml  README.md  build.gradle  keystore.enc  settings.gradle
app/: .gitignore  build.gradle
dlib/: build.gradle
easyrs/: README.md  build.gradle
libFaceDetection/: build.gradle
magicfilter/: CMakeLists.txt  build.gradle
magicfilter/src/main/java/com/jni/bitmap_operations/: JniBitmapHolder.java
magicfilter/src/main/jni/: JniBitmapOperationsLibrary.cpp
nativeLib/: CMakeLists.txt  build.gradle
sharpaiLib/: CMakeLists.txt  build.gradle
sharpaiLib/src/main/: AndroidManifest.xml
sharpaiLib/src/main/cpp/: native-lib.cpp
sharpaiLib/src/main/java/com/mtcnn_as/: FaceDetector.java
sharpaiLib/src/main/java/org/sharpai/lib/: Detection.java  FloatPoseEstimator.java  GpuDelegateHelper.java  PoseEstimator.java  Uploader.java  screenshot.java
sharpaiLib/src/main/java/org/sharpai/lib/detector/: Classifier.java  Detector.java  TFLiteObjectDetectionAPIModel.java
sharpaiLib/src/main/java/org/sharpai/lib/detector/env/: AssetUtils.java  BorderedText.java  ImageUtils.java  Logger.java  Size.java  SplitTimer.java
sharpaiLib/src/main/java/org/sharpai/lib/pim/: ExtractDiffFromRSResult.java  KeyValue.java  MotionDetectionRS.java
sharpaiLib/src/main/java/org/sharpai/lib/pim/image/: AbstractAndroidImage.java  AndroidImage.java  AndroidImageFactory.java  AndroidImage_NV21.java  Size.java
sharpaiLib/src/main/java/org/sharpai/lib/pim/io/: DataSink.java  DataWriter.java  FileUtils.java
sharpaiLib/src/main/java/org/sharpai/lib/pim/os/: AsyncTaskListener.java  StreamDataTask.java
(+94 files in other folders)
